--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,14 @@ defusedxml==0.7.1
 eval_type_backport==0.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
+filelock==3.17.0
 fonttools==4.56.0
 fqdn==1.5.1
+fsspec==2025.3.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.29.3
 idna==3.10
 ipykernel==6.29.5
 ipython==9.0.2
@@ -73,6 +76,7 @@ platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 psutil==7.0.0
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
@@ -81,15 +85,18 @@ pydantic_core==2.27.2
 Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==3.3.0
 pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.23.1
+safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 Send2Trash==1.8.3
@@ -101,8 +108,11 @@ stack-data==0.6.3
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
+tokenizers==0.21.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.49.0
 types-python-dateutil==2.9.0.20241206
 typing-inspect==0.9.0
 typing_extensions==4.12.2
